# joebot

./: .gitignore  Cargo.toml  README.md  build.rs  imclassif.py  keyword_mapping.json
joebot/: .gitignore  Cargo.toml  README.md  imclassif.py  randtext.py  requirements.txt
joebot-markov-chain/: Cargo.toml
joebot-markov-chain/src/: append.rs  generate.rs  lib.rs  selector.rs
joebot-markov-chain/tests/fixtures/: messages.html  text
joebot/examples/: mkbin.rs
joebot/src/: config.rs  main.rs  messages.rs  storage.rs  utils.rs
joebot/src/commands/: chain.rs  img2msg.rs  joker.rs  mod.rs  poll.rs  randtext.rs  taki.rs  wdyt.rs
joebot/src/commands/joker/: template.rs
joebot/src/commands/taki/: picker.rs
src/: chain.rs  config.rs  img2msg.rs  joker.rs  main.rs  messages.rs  redis.rs  storage.rs  taki.rs  telegram.rs  vk.rs  wdyt.rs
src/commands/: chain.rs  img2msg.rs  joker.rs  mod.rs  poll.rs  taki.rs  wdyt.rs
src/commands/taki/: picker.rs
src/telegram/: long_poll.rs
src/vk/: long_poll.rs
