[package]
name = "joebot"
version = "0.1.0"
authors = ["texbois"]
edition = "2018"

[dependencies]
joebot-markov-chain = { git = "https://github.com/texbois/joebot-markov-chain" }
vkopt-message-parser = { git = "https://github.com/texbois/vkopt-message-parser" }
futures-util = "0.3.5"
rand = { version = "0.7", features = ["small_rng"] }
redis = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.2"
phf = { version = "0.8", features = ["macros"] }
alcs = "0.1"
artano = "0.3"

[dependencies.serenity]
version = "0.8"
default-features = false
features = ["cache", "client", "model", "rustls_backend"]

[profile.release]
opt-level = 2
lto = true
