[package]
name = "joebot-markov-chain"
version = "0.1.0"
authors = ["texbois"]
edition = "2018"

[dependencies]
indexmap = { version = "1.5", features = ["serde-1"] }
chrono = "0.4"
rand = { version = "0.7", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
vkopt-message-parser = "0.3"
