[package]
name = "joebot"
version = "0.1.0"
authors = ["texbois"]
edition = "2018"

[dependencies]
joebot-markov-chain = { path = "../joebot-markov-chain" }
vkopt-message-parser = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
redis = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.3"
phf = { version = "0.8", features = ["macros"] }
regex = "1"
rust-stemmers = "1.2"
lazy_static = "1"
circular-queue = "0.2"

[dependencies.serenity]
version = "0.8"
default-features = false
features = ["cache", "client", "model", "rustls_backend"]
